fix: Address 5 SonarQube issues
Fixed issues:
- AZ9kMwJag304P0Ql8LLG for java:S5738 rule
- AZ9kMwHgg304P0Ql8LLF for java:S5738 rule
- AZ9kMwUBg304P0Ql8LLI for java:S5738 rule
- AZ9kMwUqg304P0Ql8LLJ for java:S5738 rule
- AZ9kMwOrg304P0Ql8LLH for java:S5738 rule

Generated by SonarQube Agent (task: dca7a97c-9b1b-4d59-a6ad-aa88c8e8bb1b)